Fixed wrapping issue in timepicker buttons

--- a/app/ClientSrc/sass/site.scss
+++ b/app/ClientSrc/sass/site.scss
@@ -395,7 +395,12 @@ div.invalid-field-message {
     border: 1px solid rgba(0, 0, 0, 0.1);
     height: 350px;
     overflow: auto;
-    padding: 10px;
+    padding: 10px 8px;
+
+    button {
+        white-space: nowrap;
+        font-size: 1.37rem;
+    }
 }
 
 a.custom-slide-time {
